--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -10,12 +10,14 @@
 
 <body>
   <h1>Biryani</h1>
-  <img src="../img/biryani.jpg" alt="Image of Biryani">
-  <h2>Description</h2>
-  <p>
-    Chicken biryani is a delicious Pakistani/Indian rice dish that's typically reserved for special occasions such as
-    weddings, parties, or holidays such as Ramadan. It has a lengthy preparation, but the work is definitely worth it.
-    For biryani, basmati rice is the ideal variety to use.</p>
+  <div class="desc">
+    <img src="../img/biryani.jpg" alt="Image of Biryani">
+    <h2>Description</h2>
+    <p>
+      Chicken biryani is a delicious Pakistani/Indian rice dish that's typically reserved for special occasions such as
+      weddings, parties, or holidays such as Ramadan. It has a lengthy preparation, but the work is definitely worth it.
+      For biryani, basmati rice is the ideal variety to use.</p>
+  </div>
   <h2>Ingredients</h2>
   <ul>
     <li>
