Put img,h2 and p tags in div

--- a/recipes/malaitikka.html
+++ b/recipes/malaitikka.html
@@ -10,11 +10,16 @@
 
 <body>
   <h1>Malai Tikka</h1>
-  <img src="../img/malaitikka.jpg" alt="">
-  <h2>Description</h2>
-  <p>Murgh Malai Tikkas are bite size pieces of chicken cooked in a creamy marinade with yoghurt, cheese, ginger, garlic
-    and chilli. There is a balance of flavour from the creamy yoghurt along with the heat of the ground chilli paste and
-    warmth from the garam masala powder. </p>
+  <div class="desc">
+
+    <img src="../img/malaitikka.jpg" alt="">
+    <h2>Description</h2>
+    <p>Murgh Malai Tikkas are bite size pieces of chicken cooked in a creamy marinade with yoghurt, cheese, ginger,
+      garlic
+      and chilli. There is a balance of flavour from the creamy yoghurt along with the heat of the ground chilli paste
+      and
+      warmth from the garam masala powder. </p>
+  </div>
   <h2>Ingredients</h2>
   <ul>
     <li>550gms chicken thighs cut to bite size pieces</li>
