Improve Structure of malaitikka.html
Replaced the default html flowlayout to flexbox layout to add better
responsivness to the web page. This is done by making flex containers
using the div element

--- a/recipes/malaitikka.html
+++ b/recipes/malaitikka.html
@@ -8,51 +8,86 @@
   <link rel="stylesheet" href="css/malaitikka.css">
 </head>
 
-<body>
-  <h1>Malai Tikka</h1>
-  <div class="desc">
 
-    <img src="../img/malaitikka.jpg" alt="">
-    <h2>Description</h2>
-    <p>Murgh Malai Tikkas are bite size pieces of chicken cooked in a creamy marinade with yoghurt, cheese, ginger,
-      garlic
-      and chilli. There is a balance of flavour from the creamy yoghurt along with the heat of the ground chilli paste
-      and
-      warmth from the garam masala powder. </p>
+<body>
+  <!-- Container for Nav Bar -->
+  <nav>
+    <ul class="nav-ul">
+      <li class="nav-head"><a href="../index.html">HomeCook</a></li>
+      <li><a href="#contact-list" class="contact">Contact</a></li>
+      <li><a class="login" href=" ">Login</a></li>
+    </ul>
+  </nav>
+
+  <!-- Heading -->
+  <h1 style="text-align: center;">Malai Tikka</h1>
+
+  <!-- Container For Description and image -->
+  <div class="desc-box">
+    <img src="/home/samarkhan/Desktop/The-Odin-Project/odin-recipes/img/malaitikka.jpg" alt="">
+    <div class="desc">
+      <h2 class="desc">Description</h2>
+      <p>Murgh Malai Tikkas are bite size pieces of chicken cooked in a creamy marinade with yoghurt, cheese, ginger,
+        garlic
+        and chilli. There is a balance of flavour from the creamy yoghurt along with the heat of the ground chilli paste
+        and
+        warmth from the garam masala powder. </p>
+    </div>
   </div>
-  <h2>Ingredients</h2>
-  <ul>
-    <li>550gms chicken thighs cut to bite size pieces</li>
-    <li>1 tbsp malt vinegar</li>
-    <li>4 garlic cloves ground to a paste</li>
-    <li>1” ginger ground to a paste</li>
-    <li>1 ½ tbsp Greek yoghurt</li>
-    <li>50mls double cream</li>
-    <li>1 heaped tsp corn flour</li>
-    <li>25gms cheddar cheese grated</li>
-    <li>1 tsp green chilli paste (add a bit less if you prefer less spicy)</li>
-    <li>1 tsp finely chopped coriander leaves</li>
-    <li>Salt to taste</li>
-    <li>Melted butter for basting</li>
-    <li>Pinch garam masala powder</li>
-    <li>Pinch chaat masala powder or lime juice</li>
-    <li>Green chutney and onion rings to serve</li>
-  </ul>
-  <h2>Steps</h2>
-  <ol>
-    <li>
-      Marinate the chicken in the vinegar, garlic and ginger paste for 15-20 minutes.
-      In a separate bowl mix together the greek yoghurt, double cream with the corn flour well making sure there are no
-      lumps. Now add the grated cheese and mix well. Add the chilli paste, chopped coriander and salt.
-    </li>
-    <li> Add this mix to the chicken and marinate 20 minutes or preferably overnight. </li>
-    <li> Soak wooden skewers in water. Preheat the grill onto a high setting. Shake off the excess marinade and thread
-      the chicken pieces onto the skewers. Place them on a wire rack on the top shelf. Cook under the grill for 12-15
-      minutes. Baste with butter every 5 minutes and cook until the juices run clear and the chicken is cooked through
-      slightly charred around the edges.</li>
-    <li>Take the chicken off the skewers and rest them over roti or naan. Sprinkle with a pinch of garam masala powder
-      and chaat masala. Serve with a green chutney and onion salad. </li>
-  </ol>
+
+  <!-- Container For Ingredients and Steps -->
+  <div class="content">
+    <div class="ing">
+      <h2>Ingredients</h2>
+      <ul>
+        <li>550gms chicken thighs cut to bite size pieces</li>
+        <li>1 tbsp malt vinegar</li>
+        <li>4 garlic cloves ground to a paste</li>
+        <li>1” ginger ground to a paste</li>
+        <li>1 ½ tbsp Greek yoghurt</li>
+        <li>50mls double cream</li>
+        <li>1 heaped tsp corn flour</li>
+        <li>25gms cheddar cheese grated</li>
+        <li>1 tsp green chilli paste (add a bit less if you prefer less spicy)</li>
+        <li>1 tsp finely chopped coriander leaves</li>
+        <li>Salt to taste</li>
+        <li>Melted butter for basting</li>
+        <li>Pinch garam masala powder</li>
+        <li>Pinch chaat masala powder or lime juice</li>
+        <li>Green chutney and onion rings to serve</li>
+      </ul>
+    </div>
+    <div class="steps">
+      <h2>Steps</h2>
+      <ol>
+        <li>
+          Marinate the chicken in the vinegar, garlic and ginger paste for 15-20 minutes.
+          In a separate bowl mix together the greek yoghurt, double cream with the corn flour well making sure there are
+          no
+          lumps. Now add the grated cheese and mix well. Add the chilli paste, chopped coriander and salt.
+        </li>
+        <li> Add this mix to the chicken and marinate 20 minutes or preferably overnight. </li>
+        <li> Soak wooden skewers in water. Preheat the grill onto a high setting. Shake off the excess marinade and
+          thread
+          the chicken pieces onto the skewers. Place them on a wire rack on the top shelf. Cook under the grill for
+          12-15
+          minutes. Baste with butter every 5 minutes and cook until the juices run clear and the chicken is cooked
+          through
+          slightly charred around the edges.</li>
+        <li>Take the chicken off the skewers and rest them over roti or naan. Sprinkle with a pinch of garam masala
+          powder
+          and chaat masala. Serve with a green chutney and onion salad. </li>
+      </ol>
+    </div>
+  </div>
+  <footer>
+    <h3 style="text-align: center; margin-top: 50px; margin-left: 20px;">Contact Me At</h3>
+    <ul class="contact-list" id="contact-list">
+      <li><a href="https://github.com/Samar-exe" target="_blank" rel="norefferer" </a>Github</li>
+      <li><a href="https://www.instagram.com/samar_.exe/" rel="norefferer">Instagram</a></li>
+      <li><a href="https://mail.google.com/mail/u/0/#inbox" rel="norefferer">Gmail</a></li>
+    </ul>
+  </footer>
 </body>
 
 </ol>
