--- a/recipes/malaitikka.html
+++ b/recipes/malaitikka.html
@@ -24,7 +24,7 @@
 
   <!-- Container For Description and image -->
   <div class="desc-box">
-    <img src="/home/samarkhan/Desktop/The-Odin-Project/odin-recipes/img/malaitikka.jpg" alt="">
+    <img src="../img/malaitikka.jpg" alt="">
     <div class="desc">
       <h2 class="desc">Description</h2>
       <p>Murgh Malai Tikkas are bite size pieces of chicken cooked in a creamy marinade with yoghurt, cheese, ginger,
