Improve the overall structure of the landing Page
Divided The landing page in 4 sections Header, About, Recipes and Footer
sections to make a clean layout. This will enable me to easily modify
this file in future commits

--- a/index.html
+++ b/index.html
@@ -9,11 +9,60 @@
 </head>
 
 <body>
-  <h1>Odin Recipes</h1>
-  <ul>
-    <li> <a href="./recipes/biryani.html">Biryani</a> </li>
-    <li><a href="./recipes/malaitikka.html">Mailai Tikka</a></li>
-  </ul>
+  <header>
+    <nav>
+      <ul class="nav-ul">
+        <li class="logo"><a href="index.html">HomeCook</a></li>
+        <li><a href="#contact-list">Contact</a></li>
+        <li><a href="">Login</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- An Introduction Section -->
+  <section class="About">
+    <img src="./img/Home Cook.png" alt="Logo Of Home Cook">
+    <div class=" desc">
+      <h2>About Us</h2>
+      <p>
+        Welcome to HomeCook, your go-to destination for delicious recipes!
+
+        Hey there, cooking enthusiasts! I'm [Samar], the creator behind HomeCook. I've always had a passion for food
+        and cooking, and I created this platform to share that passion with you.
+
+        At HomeCook, you'll find a wide variety of recipes to suit every taste and occasion. From quick and easy
+        weeknight dinners to indulgent desserts, I'm here to help you elevate your home cooking game.
+
+        Join me on this culinary adventure as we explore new flavors, techniques, and recipes together. Whether you're a
+        seasoned chef or just starting out in the kitchen, there's something here for everyone.
+        <br>
+        <br>
+        Let's get cooking!
+        <br>
+        [Samar]
+      </p>
+    </div>
+  </section>
+
+
+  <!-- Section which will contain links to various recipes -->
+  <section class="Book">
+    <h2>Recipes</h2>
+    <ul>
+      <li><a href="recipes/biryani.html">Biryani</a></li>
+      <li><a href="recipes/malaitikka.html">Malai Tikka</a></li>
+    </ul>
+  </section>
+
+  <!-- Footer section -->
+  <footer>
+    <h3 style="text-align: center; margin-top: 50px; margin-left: 20px; padding-top:20px">Contact Me At</h3>
+    <ul class="contact-list" id="contact-list">
+      <li><a href="https://github.com/Samar-exe" target="_blank" rel="norefferer" </a>Github</li>
+      <li><a href="https://www.instagram.com/samar_.exe/" rel="norefferer">Instagram</a></li>
+      <li><a href="https://mail.google.com/mail/u/0/#inbox" rel="norefferer">Gmail</a></li>
+    </ul>
+  </footer>
 </body>
 
 </html>
