Improve Structure of The Page
Divided the elements into Flex Containers to make the components
responsive.

--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -9,66 +9,95 @@
 </head>
 
 <body>
-  <h1>Biryani</h1>
-  <div class="desc">
+  <!-- Container for Nav Bar -->
+  <nav>
+    <ul class="nav-ul">
+      <li class="nav-head"><a href="../index.html">HomeCook</a></li>
+      <li><a href="#contact-list" class="contact">Contact</a></li>
+      <li><a class="login" href=" ">Login</a></li>
+    </ul>
+  </nav>
+
+  <!-- Heading -->
+  <h1 style="text-align: center;">Biryani</h1>
+
+  <!-- Container For Description and image -->
+  <div class="desc-box">
     <img src="../img/biryani.jpg" alt="Image of Biryani">
-    <h2>Description</h2>
-    <p>
-      Chicken biryani is a delicious Pakistani/Indian rice dish that's typically reserved for special occasions such as
-      weddings, parties, or holidays such as Ramadan. It has a lengthy preparation, but the work is definitely worth it.
-      For biryani, basmati rice is the ideal variety to use.</p>
+    <div class="desc">
+      <h2>Description</h2>
+      <p>
+        Chicken biryani is a delicious Pakistani/Indian rice dish that's typically reserved for special occasions such
+        as
+        weddings, parties, or holidays such as Ramadan. It has a lengthy preparation, but the work is definitely worth
+        it.
+        For biryani, basmati rice is the ideal variety to use.</p>
+    </div>
   </div>
-  <h2>Ingredients</h2>
-  <ul>
-    <li>
-      4 tablespoons vegetable oil, divided
-    </li>
-    <li></li>
 
+  <!-- Container For Ingredients and Steps -->
+  <div class="content">
+    <div class="ing">
+      <h2>Ingredients</h2>
+      <ul>
+        <li> 4 tablespoons vegetable oil, divided</li>
+        <li>4 small potatoes, peeled and halved</li>
+        <li>2 large onions, finely chopped</li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 tablespoon minced fresh ginger root</li>
+        <li>2 medium tomatoes, peeled and chopped</li>
+        <li>1 teaspoon salt</li>
+        <li>1 teaspoon ground cumin</li>
+        <li>½ teaspoon chili powder</li>
+        <li>½ teaspoon ground black pepper</li>
+        <li>½ teaspoon ground turmeric</li>
+        <li>2 tablespoons plain yogurt</li>
+        <li>2 tablespoons chopped fresh mint leaves</li>
+        <li>½ teaspoon ground cardamom</li>
+        <li>1 (2 inch) piece cinnamon stick</li>
+        <li>3 pounds boneless, skinless chicken pieces cut into chunks</li>
+      </ul>
+    </div>
+    <div class="steps">
 
+      <h2>Steps</h2>
+      <ol <li>Gather all ingredients. </li>
+        <li>Heat 2 tablespoons of oil in a large skillet. Fry potatoes in hot oil until lightly browned, about 3 to 5
+          minutes. Remove to a paper towel-lined plate to drain; set aside. </li>
+        <li>Add remaining 2 tablespoons of oil to the skillet. Add onions, garlic, and fresh ginger; cook and stir until
+          onion is soft and golden. Add tomatoes, salt, cumin, chili powder, pepper, and turmeric; cook, stirring
+          constantly, for 5 minutes. </li>
+        <li>Stir in yogurt, mint, ground cardamom, and cinnamon stick. Cover and cook over low heat, stirring
+          occasionally,
+          until tomatoes are cooked to a pulp. It may be necessary to add a little hot water if mixture becomes too dry
+          and
+          starts to stick to the pan. </li>
+        <li> Add chicken and stir well to coat. Cover and cook over very low heat until chicken is tender, 35 to 45
+          minutes.
+          There should only be a little very thick gravy left when chicken is finished cooking. If necessary cook
+          uncovered
+          for a few minutes to reduce the gravy.</li>
+        <li>Meanwhile, make the rice: Wash rice well and drain in a colander for at least 30 minutes. </li>
+        <li>Heat oil in a large skillet. Add onion; cook and stir until golden. Add cardamom pods, cloves, cinnamon
+          stick,
+          ground ginger, and saffron; stir in rice until coated with spices. </li>
+        <li>Heat stock and salt in a medium pot until hot; pour over rice and stir well. </li>
+        <li>Add chicken mixture and potatoes; stir gently to combine. Bring to a boil. </li>
+        <li>Reduce heat to very low, cover with a tight-fitting lid, and steam for 20 minutes without lifting the lid or
+          stirring. </li>
+        <li>Spoon biryani onto a warm serving dish. </li>
 
-
-    <li>4 small potatoes, peeled and halved</li>
-    <li>2 large onions, finely chopped</li>
-    <li>2 cloves garlic, minced</li>
-    <li>1 tablespoon minced fresh ginger root</li>
-    <li>2 medium tomatoes, peeled and chopped</li>
-    </li>
-    <li>1 teaspoon salt</li>
-    <li>1 teaspoon ground cumin</li>
-    <li>½ teaspoon chili powder</li>
-    <li>½ teaspoon ground black pepper</li>
-    <li>½ teaspoon ground turmeric</li>
-    <li>2 tablespoons plain yogurt</li>
-    <li>2 tablespoons chopped fresh mint leaves</li>
-    <li>½ teaspoon ground cardamom</li>
-    <li>1 (2 inch) piece cinnamon stick</li>
-    <li>3 pounds boneless, skinless chicken pieces cut into chunks</li>
-  </ul>
-  <h2>Steps</h2>
-  <ol>
-    <li>Gather all ingredients. </li>
-    <li>Heat 2 tablespoons of oil in a large skillet. Fry potatoes in hot oil until lightly browned, about 3 to 5
-      minutes. Remove to a paper towel-lined plate to drain; set aside. </li>
-    <li>Add remaining 2 tablespoons of oil to the skillet. Add onions, garlic, and fresh ginger; cook and stir until
-      onion is soft and golden. Add tomatoes, salt, cumin, chili powder, pepper, and turmeric; cook, stirring
-      constantly, for 5 minutes. </li>
-    <li>Stir in yogurt, mint, ground cardamom, and cinnamon stick. Cover and cook over low heat, stirring occasionally,
-      until tomatoes are cooked to a pulp. It may be necessary to add a little hot water if mixture becomes too dry and
-      starts to stick to the pan. </li>
-    <li> Add chicken and stir well to coat. Cover and cook over very low heat until chicken is tender, 35 to 45 minutes.
-      There should only be a little very thick gravy left when chicken is finished cooking. If necessary cook uncovered
-      for a few minutes to reduce the gravy.</li>
-    <li>Meanwhile, make the rice: Wash rice well and drain in a colander for at least 30 minutes. </li>
-    <li>Heat oil in a large skillet. Add onion; cook and stir until golden. Add cardamom pods, cloves, cinnamon stick,
-      ground ginger, and saffron; stir in rice until coated with spices. </li>
-    <li>Heat stock and salt in a medium pot until hot; pour over rice and stir well. </li>
-    <li>Add chicken mixture and potatoes; stir gently to combine. Bring to a boil. </li>
-    <li>Reduce heat to very low, cover with a tight-fitting lid, and steam for 20 minutes without lifting the lid or
-      stirring. </li>
-    <li>Spoon biryani onto a warm serving dish. </li>
-
-  </ol>
+      </ol>
+    </div>
+  </div>
+  <footer>
+    <h3 style="text-align: center; margin-top: 50px; margin-left: 20px;">Contact Me At</h3>
+    <ul class="contact-list" id="contact-list">
+      <li><a href="https://github.com/Samar-exe" target="_blank" rel="norefferer" </a>Github</li>
+      <li><a href="https://www.instagram.com/samar_.exe/" rel="norefferer">Instagram</a></li>
+      <li><a href="https://mail.google.com/mail/u/0/#inbox" rel="norefferer">Gmail</a></li>
+    </ul>
+  </footer>
 </body>
 
 </html>
