--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Odin Recipes</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -48,10 +48,12 @@
   <!-- Section which will contain links to various recipes -->
   <section class="Book">
     <h2>Recipes</h2>
-    <ul>
-      <li><a href="recipes/biryani.html">Biryani</a></li>
-      <li><a href="recipes/malaitikka.html">Malai Tikka</a></li>
-    </ul>
+    <div class="recipe-list">
+      <ul>
+        <li><a href="recipes/biryani.html">Biryani</a></li>
+        <li><a href="recipes/malaitikka.html">Malai Tikka</a></li>
+      </ul>
+    </div>
   </section>
 
   <!-- Footer section -->
